google analytics added

--- a/index.html
+++ b/index.html
@@ -412,5 +412,7 @@
     <script src="assets/js/scrollReveal.js"></script>
        <!-- CUSTOM SCRIPT-->
     <script src="assets/js/custom.js"></script>
+	<!--Google analytics   -->
+    <script src="assets/js/analytics.js"></script>
 </body>
 </html>
